--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
+    "material-icons": "^0.3.1",
+    "qrcode": "^1.4.4",
     "register-service-worker": "^1.6.2",
+    "roboto-fontface": "*",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-gcode-viewer": "^1.1.0",
+    "vue-router": "^3.1.5",
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
@@ -30,6 +36,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "geckodriver": "^1.19.1",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.4",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
