--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "watch": "vue-cli-service build --modern --mode production --watch",
+    "watch": "vue-cli-service build --modern --watch",
+    "watch:production": "vue-cli-service build --modern --mode production --watch",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
@@ -12,15 +13,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "lodash": "^4.17.15",
     "material-icons": "^0.3.1",
     "qrcode": "^1.4.4",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-gcode-viewer": "^1.1.0",
-    "vue-router": "^3.1.5",
-    "vuetify": "^2.1.0"
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.2.15"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.3",
@@ -31,13 +31,13 @@
     "@vue/cli-plugin-unit-mocha": "^4.2.3",
     "@vue/cli-service": "^4.2.3",
     "@vue/test-utils": "1.0.0-beta.31",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
     "chromedriver": "79",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^6.2.1",
     "geckodriver": "^1.19.1",
-    "sass": "^1.19.0",
+    "sass": "^1.26.2",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.11",
