--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "watch": "vue-cli-service build --modern --watch",
-    "watch:production": "vue-cli-service build --modern --mode production --watch",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "coverage": "nyc --reporter=lcov vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "serve": "vue-cli-service serve",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "test:unit": "vue-cli-service test:unit",
+    "watch:production": "vue-cli-service build --modern --mode production --watch",
+    "watch": "vue-cli-service build --modern --watch"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -18,7 +19,7 @@
     "register-service-worker": "^1.7.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
-    "vue-gcode-viewer": "^1.1.2",
+    "vue-gcode-viewer": "^1.1.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.17"
   },
@@ -32,12 +33,15 @@
     "@vue/cli-service": "^4.3.1",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.1.2",
     "chromedriver": "79",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
-    "sass": "^1.26.3",
+    "null-loader": "^4.0.0",
+    "nyc": "^15.0.1",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.11",
