Unit test fix 2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: stefanoeb/eslint-action@1.0.2
         name: ESLint
       - name: Install Modules
-        run: sudo npm ci
+        run: sudo npm ci --unsafe-perm=true --allow-root
       - name: Build
         run: sudo npm run build
