--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Config files
+config/*
+!config/default.js
+!config/development.js
+
 # Editor directories and files
 .idea
 .vscode
