--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "build": "vue-cli-service build",
     "coverage": "nyc --reporter=lcov vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host 127.0.0.1 --https --port 8443",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "watch:production": "vue-cli-service build --modern --mode production --watch",
     "watch": "vue-cli-service build --modern --watch"
   },
   "dependencies": {
+    "config": "^3.3.1",
     "core-js": "^3.6.5",
     "material-icons": "^0.3.1",
     "qrcode": "^1.4.4",
@@ -21,7 +21,9 @@
     "vue": "^2.6.11",
     "vue-gcode-viewer": "^1.1.3",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.2.17"
+    "vuetify": "^2.2.27",
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.1",
@@ -30,6 +32,7 @@
     "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-plugin-unit-mocha": "^4.3.1",
+    "@vue/cli-plugin-vuex": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
