--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue-gcode-viewer": "^1.1.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.27",
-    "vuex": "^3.1.3",
+    "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.1.2",
-    "chromedriver": "79",
+    "chromedriver": "^81.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
