--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         node: [13, 14]
     steps:
-      - uses: actions/checkout@v2.0.0
+      - uses: actions/checkout@v2.1.0
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
@@ -16,5 +16,9 @@ jobs:
         name: ESLint
       - name: Install Modules
         run: sudo npm ci --unsafe-perm=true --allow-root
-      - name: Run Tests
-        run: sudo npm run coverage
+      - uses: paambaati/codeclimate-action@v2.6.0
+        name: Run Tests
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMATE_REPORTER_ID }}
+        with:
+          coverageCommand: sudo npm run coverage
