--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 node_modules
 /dist
 
-/tests/e2e/reports/
-selenium-debug.log
-chromedriver.log
-geckodriver.log
+# Cypress
+tests/e2e/screenshots/*
+tests/e2e/videos/*
+tests/e2e/reports/*
 
 # local env files
 .env.local
