--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --host 127.0.0.1 --https --port 8443",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
+    "coverage": "npm run test:unit && npm run test:e2e && nyc report --reporter=lcov",
     "lint": "vue-cli-service lint",
-    "coverage": "nyc --reporter=lcov vue-cli-service test:unit",
-    "watch": "vue-cli-service build --modern --watch"
+    "serve": "vue-cli-service serve --host 127.0.0.1 --https --port 8443",
+    "test:e2e": "concurrently --kill-others --success first \"npm:serve\" \"vue-cli-service test:e2e --headless --url https://127.0.0.1:8443\"",
+    "test:unit": "nyc --no-clean --silent vue-cli-service test:unit"
   },
   "dependencies": {
     "config": "^3.3.1",
@@ -26,6 +25,7 @@
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.7.5",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-e2e-cypress": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
@@ -39,6 +39,7 @@
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.1.2",
     "chromedriver": "^81.0.0",
+    "concurrently": "^5.2.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
@@ -46,6 +47,7 @@
     "nyc": "^15.0.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.0",
+    "speakeasy": "^2.0.0",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
