--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve --host 127.0.0.1 --https --port 8443",
     "test:e2e": "concurrently --kill-others --success first \"npm:serve\" \"vue-cli-service test:e2e --headless --url https://127.0.0.1:8443\"",
+    "test:e2e:gui": "concurrently --kill-others --success first \"npm:serve\" \"vue-cli-service test:e2e --url https://127.0.0.1:8443\"",
     "test:unit": "nyc --no-clean --silent vue-cli-service test:unit"
   },
   "dependencies": {
@@ -19,21 +20,21 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-gcode-viewer": "^1.2.1",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.2.29",
-    "vuex": "^3.4.0",
+    "vue-router": "^3.3.4",
+    "vuetify": "^2.3.2",
+    "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.7.5",
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-plugin-e2e-cypress": "^4.3.1",
-    "@vue/cli-plugin-eslint": "^4.3.1",
-    "@vue/cli-plugin-pwa": "^4.3.1",
-    "@vue/cli-plugin-router": "^4.3.1",
-    "@vue/cli-plugin-unit-mocha": "^4.3.1",
-    "@vue/cli-plugin-vuex": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
+    "@cypress/code-coverage": "^3.8.1",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-e2e-cypress": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-pwa": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.4.6",
+    "@vue/cli-plugin-unit-mocha": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
     "babel-plugin-istanbul": "^6.0.0",
@@ -43,13 +44,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
+    "node-ipc": "^9.1.1",
     "null-loader": "^4.0.0",
-    "nyc": "^15.0.1",
-    "sass": "^1.26.5",
+    "nyc": "^15.1.0",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.0",
     "speakeasy": "^2.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.5.0"
   }
 }
