--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve": "vue-cli-service serve --host 127.0.0.1 --https --port 8443",
     "test:e2e": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"vue-cli-service test:e2e --headless --url https://127.0.0.1:8443\"",
     "test:e2e:gui": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"vue-cli-service test:e2e --url https://127.0.0.1:8443\"",
-    "test:unit": "cross-env NODE_ENV=development nyc --no-clean --silent vue-cli-service test:unit"
+    "test:unit": "nyc --no-clean --silent vue-cli-service test:unit"
   },
   "dependencies": {
     "config": "^3.3.1",
@@ -22,7 +22,7 @@
     "vue": "^2.6.11",
     "vue-gcode-viewer": "^1.2.1",
     "vue-router": "^3.3.4",
-    "vuetify": "^2.3.2",
+    "vuetify": "^2.3.4",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.0.1"
   },
@@ -49,12 +49,12 @@
     "node-ipc": "^9.1.1",
     "null-loader": "^4.0.0",
     "nyc": "^15.1.0",
-    "sass": "^1.26.9",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.0",
     "speakeasy": "^2.0.0",
     "uuid": "^8.2.0",
     "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.5.0"
+    "vuetify-loader": "^1.6.0"
   }
 }
