--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "coverage": "npm run test:unit && npm run test:e2e && nyc report --reporter=lcov",
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve --host 127.0.0.1 --https --port 8443",
-    "test:e2e": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"vue-cli-service test:e2e --headless --url https://127.0.0.1:8443\"",
     "test:e2e:gui": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"vue-cli-service test:e2e --url https://127.0.0.1:8443\"",
+    "test:e2e": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"vue-cli-service test:e2e --headless --url https://127.0.0.1:8443\"",
     "test:unit": "nyc --no-clean --silent vue-cli-service test:unit"
   },
   "dependencies": {
@@ -46,6 +46,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
+    "mongoose": "^5.9.24",
     "node-ipc": "^9.1.1",
     "null-loader": "^4.0.0",
     "nyc": "^15.1.0",
