--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,6 +67,10 @@ jobs:
           repository: 'cloud-cnc/core'
           path: core
 
+      - name: Create files directory
+        working-directory: ./core
+        run: mkdir files
+
       - name: Install core modules
         working-directory: ./core
         run: sudo npm ci --unsafe-perm=true --allow-root
