--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve --host 127.0.0.1 --https --port 8443",
     "test:e2e": "vue-cli-service test:e2e --url https://127.0.0.1:8443",
-    "test:e2e:gui": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"npm:test:e2e\"",
-    "test:e2e:cli": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"npm:test:e2e -- --headless\"",
+    "test:e2e:gui": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"wait-on https-get://127.0.0.1:8443 && npm run test:e2e\"",
+    "test:e2e:cli": "cross-env NODE_ENV=development concurrently --kill-others --success first \"npm:core\" \"npm:serve\" \"wait-on https-get://127.0.0.1:8443 && npm run test:e2e -- --headless\"",
     "test:unit": "nyc --no-clean --silent vue-cli-service test:unit"
   },
   "dependencies": {
@@ -57,6 +57,7 @@
     "uuid": "^8.2.0",
     "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.6.0"
+    "vuetify-loader": "^1.6.0",
+    "wait-on": "^5.1.0"
   }
 }
