Switched to multipart for file uploads + added raw route + added file extension support + switched to vue-3d-viewer

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "qrcode": "^1.4.4",
     "register-service-worker": "^1.7.0",
     "roboto-fontface": "*",
+    "unified-3d-loader": "^1.1.2-beta.0",
     "vue": "^2.6.12",
-    "vue-gcode-viewer": "^1.2.2",
+    "vue-3d-viewer": "^1.0.1",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.10",
     "vuex": "^3.5.1",
