--- a/package.json
+++ b/package.json
@@ -14,31 +14,30 @@
     "test:unit": "nyc --no-clean --silent vue-cli-service test:unit"
   },
   "dependencies": {
-    "config": "^3.3.2",
+    "config": "^3.3.1",
     "core-js": "^3.6.5",
-    "cura-wasm": "^1.3.1",
     "material-icons": "^0.3.1",
     "qrcode": "^1.4.4",
     "register-service-worker": "^1.7.0",
     "roboto-fontface": "*",
-    "unified-3d-loader": "^1.1.3",
+    "unified-3d-loader": "^1.1.2-beta.0",
     "vue": "^2.6.12",
-    "vue-3d-viewer": "^1.0.5",
-    "vue-router": "^3.4.6",
-    "vuetify": "^2.3.14",
+    "vue-3d-viewer": "^1.0.1",
+    "vue-router": "^3.4.3",
+    "vuetify": "^2.3.10",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.8.1",
-    "@vue/cli-plugin-babel": "^4.5.7",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.7",
-    "@vue/cli-plugin-eslint": "^4.5.7",
-    "@vue/cli-plugin-pwa": "^4.5.7",
-    "@vue/cli-plugin-router": "^4.5.7",
-    "@vue/cli-plugin-unit-mocha": "^4.5.7",
-    "@vue/cli-plugin-vuex": "^4.5.7",
-    "@vue/cli-service": "^4.5.7",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.6",
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/cli-plugin-pwa": "^4.5.6",
+    "@vue/cli-plugin-router": "^4.5.6",
+    "@vue/cli-plugin-unit-mocha": "^4.5.6",
+    "@vue/cli-plugin-vuex": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
     "babel-plugin-istanbul": "^6.0.0",
@@ -49,14 +48,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.20.0",
-    "mongoose": "^5.10.9",
+    "mongoose": "^5.10.6",
     "node-ipc": "^9.1.1",
-    "null-loader": "^4.0.1",
+    "null-loader": "^4.0.0",
     "nyc": "^15.1.0",
-    "sass": "^1.27.0",
+    "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "speakeasy": "^2.0.0",
-    "uuid": "^8.3.1",
+    "uuid": "^8.3.0",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0",
