--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "config": "^3.3.1",
     "core-js": "^3.6.5",
+    "cura-wasm": "^1.3.1",
     "material-icons": "^0.3.1",
     "qrcode": "^1.4.4",
     "register-service-worker": "^1.7.0",
     "roboto-fontface": "*",
     "unified-3d-loader": "^1.1.2-beta.0",
     "vue": "^2.6.12",
-    "vue-3d-viewer": "^1.0.1",
+    "vue-3d-viewer": "^1.0.5",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.10",
     "vuex": "^3.5.1",
