--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chromedriver": "^81.0.0",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
+    "cypress-terminal-report": "^2.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.20.0",
