--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sass": "^1.27.0",
     "sass-loader": "^8.0.0",
     "speakeasy": "^2.0.0",
+    "tmp": "^0.2.1",
     "uuid": "^8.3.1",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.12",
