--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,6 +59,11 @@ jobs:
       - name: Enable MongoDB
         run: sudo systemctl start mongod
 
+      - name: Install & Enable RedisDB
+        run: |
+          sudo apt install redis-server
+          sudo systemctl start redis-server
+
       - name: Clone core
         uses: actions/checkout@v2
         with:
