--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "config": "^3.3.2",
     "core-js": "^3.6.5",
-    "cura-wasm": "^1.3.1",
+    "cura-wasm": "^1.5.1",
     "material-icons": "^0.3.1",
     "qrcode": "^1.4.4",
     "register-service-worker": "^1.7.0",
     "roboto-fontface": "*",
+    "socket.io-client": "^3.0.4",
     "unified-3d-loader": "^1.1.3",
     "vue": "^2.6.12",
     "vue-3d-viewer": "^1.0.5",
