--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
   },
   "homepage": "https://cloud-cnc.github.io",
   "dependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/types": "^7.14.5",
     "@nuxtjs/pwa": "^3.3.5",
+    "ast-to-literal": "^0.0.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-router": "^3.5.2",
+    "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
