--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "ast-to-literal": "^0.0.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.5.5"
+    "vuetify": "^2.5.5",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
