--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     ],
     "sourceMap": true,
     "noEmit": true,
+    "resolveJsonModule": true,
     
     /* Strict Type-Checking Options */
     "strict": true,
@@ -37,7 +38,8 @@
     },
     "types": [
       "@nuxt/types",
-      "@types/node"
+      "@types/node",
+      "vuetify"
     ]
   },
   "exclude": [
