--- a/package.json
+++ b/package.json
@@ -29,9 +29,15 @@
     "@babel/core": "^7.14.6",
     "@babel/types": "^7.14.5",
     "@nuxtjs/pwa": "^3.3.5",
+    "@pobedit/package-name-parser": "^1.0.0",
     "ast-to-literal": "^0.0.5",
+    "chokidar": "^3.5.2",
     "core-js": "^3.15.1",
+    "fs-extra": "^9.1.0",
+    "jiti": "^1.10.1",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.7",
+    "read-pkg": "^6.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
@@ -46,6 +52,7 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.1",
+    "@types/fs-extra": "^9.0.12",
     "@wdio/cli": "^7.7.4",
     "@wdio/local-runner": "^7.7.4",
     "@wdio/mocha-framework": "^7.7.4",
