--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
   "dependencies": {
     "@babel/core": "^7.14.6",
     "@babel/types": "^7.14.5",
+    "@cloud-cnc/plugin-example": "file:plugin-example",
+    "@nuxt/types": "^2.15.7",
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "@pobedit/package-name-parser": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.12.1",
+    "@types/fs-extra": "^9.0.12",
     "ast-to-literal": "^0.0.5",
     "chokidar": "^3.5.2",
     "core-js": "^3.15.1",
@@ -37,22 +41,20 @@
     "jiti": "^1.10.1",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.7",
+    "portal-vue": "^2.1.7",
     "read-pkg": "^6.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.5",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vuex-persistedstate": "^4.0.0-beta.3",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
-    "@nuxt/types": "^2.15.7",
-    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/vuetify": "^1.12.1",
-    "@types/fs-extra": "^9.0.12",
     "@wdio/cli": "^7.7.4",
     "@wdio/local-runner": "^7.7.4",
     "@wdio/mocha-framework": "^7.7.4",
