--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "build": "vue-cli-service build",
@@ -14,55 +14,55 @@
     "test:unit": "nyc --no-clean --silent vue-cli-service test:unit"
   },
   "dependencies": {
-    "config": "^3.3.2",
-    "core-js": "^3.6.5",
-    "cura-wasm": "^1.5.1",
-    "material-icons": "^0.3.1",
-    "qrcode": "^1.4.4",
-    "register-service-worker": "^1.7.0",
+    "config": "^3.3.7",
+    "core-js": "^3.20.3",
+    "cura-wasm": "^1.5.2",
+    "material-icons": "^1.10.6",
+    "qrcode": "^1.5.0",
+    "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
-    "socket.io-client": "^3.0.4",
-    "unified-3d-loader": "^1.1.3",
-    "vue": "^2.6.12",
-    "vue-3d-viewer": "^1.0.5",
-    "vue-router": "^3.4.6",
-    "vuetify": "^2.3.14",
-    "vuex": "^3.5.1",
-    "vuex-persistedstate": "^3.1.0"
+    "socket.io-client": "^4.4.1",
+    "unified-3d-loader": "^1.1.4",
+    "vue": "^2.6.14",
+    "vue-3d-viewer": "^1.0.7",
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.6.3",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.8.1",
-    "@vue/cli-plugin-babel": "^4.5.7",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.7",
-    "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-plugin-pwa": "^4.5.7",
-    "@vue/cli-plugin-router": "^4.5.7",
-    "@vue/cli-plugin-unit-mocha": "^3.12.1",
-    "@vue/cli-plugin-vuex": "^4.5.7",
-    "@vue/cli-service": "^3.12.1",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@cypress/code-coverage": "^3.9.12",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-plugin-unit-mocha": "^4.5.15",
+    "@vue/cli-plugin-vuex": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/test-utils": "1.3.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "chai": "^4.1.2",
-    "chromedriver": "^91.0.0",
-    "concurrently": "^5.3.0",
-    "cross-env": "^7.0.2",
-    "cypress-terminal-report": "^2.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.20.0",
-    "mongoose": "^5.10.9",
-    "node-ipc": "^9.1.1",
+    "babel-plugin-istanbul": "^6.1.1",
+    "chai": "^4.3.6",
+    "chromedriver": "^97.0.2",
+    "concurrently": "^7.0.0",
+    "cross-env": "^7.0.3",
+    "cypress-terminal-report": "^3.4.1",
+    "eslint": "^8.8.0",
+    "eslint-plugin-vue": "^8.4.0",
+    "geckodriver": "^3.0.1",
+    "mongoose": "^6.1.8",
+    "node-ipc": "^10.1.0",
     "null-loader": "^4.0.1",
     "nyc": "^15.1.0",
-    "sass": "^1.27.0",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
     "speakeasy": "^2.0.0",
     "tmp": "^0.2.1",
-    "uuid": "^8.3.1",
-    "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.6.0",
-    "wait-on": "^5.2.0"
+    "uuid": "^8.3.2",
+    "vue-cli-plugin-vuetify": "^2.4.5",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.3",
+    "wait-on": "^6.0.0"
   }
 }
